Revert double slab fix (doesn't work)